bia/infra/terraform/modules/security/main.tf
variable "vpc_id" {}

resource "aws_security_group" "ec2" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 5678
    to_port     = 5678
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds" {
  vpc_id = var.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ec2.id]
  }
}

output "ec2_sg" {
  value = aws_security_group.ec2.id
}

output "rds_sg" {
  value = aws_security_group.rds.id
}
